@@ -132,7 +132,7 @@ defineTest(qtAddModule) {
 
     isEmpty(LINKAGE) {
        # Make sure we can link to uninstalled libraries
-       !isEqual(MODULE_LIBS, $$[QT_INSTALL_LIBS]) {
+       !isEqual(MODULE_LIBS, $$[QT_INSTALL_LIBS]) { ### XXX
            QMAKE_LIBDIR *= $$MODULE_LIBS
            unix:!mac:QMAKE_LFLAGS *= "-Wl,-rpath-link,$$MODULE_LIBS"
        }
@@ -164,7 +164,7 @@ defineTest(qtAddModule) {
 
 # variable, default
 defineTest(qtPrepareTool) {
-    MODBASE = $$[QT_INSTALL_BINS]
+    MODBASE = $$[QT_HOST_BINS]
     !isEmpty(QT_BUILD_TREE):MODBASE = $$QT_BUILD_TREE/bin
     count(ARGS, 2, greaterThan) {
         isEmpty(QT.$${3}.bins):warning("No QT.$${3}.bins, module path ignored for qtPrepareTool($$1, $$2, $$3)")
