@@ -13,6 +13,6 @@ HEADERS += qdatetime_p.h
 SOURCES += main.cpp
 include(../bootstrap/bootstrap.pri)
 
-target.path=$$[QT_INSTALL_BINS]
+target.path = $$[QT_HOST_BINS]
 INSTALLS += target
 load(qt_targets)
