@@ -11,6 +11,6 @@ HEADERS += ../../corelib/kernel/qcorecmdlineargs_p.h
 SOURCES += main.cpp
 include(../bootstrap/bootstrap.pri)
 
-target.path=$$[QT_INSTALL_BINS]
+target.path = $$[QT_HOST_BINS]
 INSTALLS += target
 load(qt_targets)
